--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
   "author": "Branden Strydom",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "node-cryptojs-aes": "^0.4.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "nodemon": "^2.0.20"
   }
 }
